style(index.html): update meta tags for theme-color and description to match the new project requirements

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#e22653" />
-  <meta name="description" content="A cartography of Wikipedia pages around data visualization" />
+  <meta name="theme-color" content="#4b92db" />
+  <meta name="description" content="A network visualization of UNBIS Thesaurus" />
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
